[package]
name = "pallet-dex-runtime-api"
version = "0.1.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2021"
license = "GPL-3.0-or-later"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch ="polkadot-v0.9.28" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

#pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, path = "../../../transaction-payment" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "sp-runtime/std",
]