[package]
name = "pallet-dex-runtime-api"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Runtime API definition required by DEX RPC extensions."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate Dependencies
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch ="polkadot-v0.9.30" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
std = [
    "sp-api/std",
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
]